// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header The user is authorized 1`] = `
<header
  className="appHeader"
>
  <img
    alt="menu-burger"
    className="appHeaderImage"
    src="https://siliconprice.com/img/mobileMenuIcon.png"
  />
  <div
    className="appHeaderLoginBlock"
  >
    <NavLink
      className="appHeaderLogIn"
      to="/login"
    >
      <span>
        sasha2020
      </span>
    </NavLink>
    <span
      className="appHeaderLogOut"
      onClick={[Function]}
    >
      Выйти
    </span>
  </div>
</header>
`;

exports[`Header The user isn't authorized 1`] = `
<header
  className="appHeader"
>
  <img
    alt="menu-burger"
    className="appHeaderImage"
    src="https://siliconprice.com/img/mobileMenuIcon.png"
  />
  <div
    className="appHeaderLoginBlock"
  >
    <NavLink
      className="appHeaderLogIn"
      to="/login"
    >
      <span>
        Войти
      </span>
    </NavLink>
    <span
      className="appHeaderLogOut"
      onClick={[Function]}
    />
  </div>
</header>
`;
